// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home.container for groups Home.container translation should render groups correctly with english translation 1`] = `
<DocumentFragment>
  <div
    class="af-title-bar af-title-bar--backhome"
  >
    <div
      class="container-fluid container af-title-bar__wrapper"
    >
      <a
        class="btn af-btn--circle"
        href="/"
        title="Home page"
      >
        <i
          class="glyphicon glyphicon-home"
        />
      </a>
      <h1
        class="af-title-bar__title"
      >
        Teams
      </h1>
      <small
        class="af-title-bar__subtitle"
      >
        Annotation teams governance
      </small>
    </div>
  </div>
  <div
    class="af-home container"
  >
    <h1
      class="af-title--content"
    >
      Creation
    </h1>
    <form
      name="newGroup"
    >
      <article
        class="af-panel af-panel--new-group"
      >
        <section
          class="af-panel__content af-panel__content--new-group"
        >
          <div
            class="row af-form__group"
          >
            <div
              class="col-md-2"
            >
              <label
                class="af-form__group-label"
                for="NAME"
              >
                Name : 
              </label>
            </div>
            <div
              class="col-md-10"
            >
              <div
                class="af-form__text"
              >
                <input
                  class="af-form__input-text"
                  id="NAME"
                  name="NAME"
                  type="text"
                  value=""
                />
              </div>
              <small
                class="af-form__help"
              >
                Ex : bank account details annotators
              </small>
            </div>
          </div>
          <button
            class="btn af-btn af-btn--hasiconRight af-btn--confirm af-btn--disabled"
            disabled=""
            id="myForm"
          >
            <span
              class="af-btn-text"
            >
              Validate
            </span>
            <i
              class="glyphicon glyphicon-arrowthin-right"
            />
          </button>
        </section>
      </article>
    </form>
    <h1
      class="af-title--content"
    >
      There is/are (1) team(s)
    </h1>
    <table
      class="af-table"
    >
      <thead
        class="af-table-thead"
      >
        <tr
          class="af-table__tr"
        >
          <th
            class="af-table__th"
          >
            <span
              class="af-table__th-content"
            >
              Name
            </span>
          </th>
          <th
            class="af-table__th"
          >
            <span
              class="af-table__th-content"
            >
              Users
            </span>
          </th>
          <th
            class="af-table__th"
          >
            <span
              class="af-table__th-content"
            >
              Actions
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class="af-table__body"
      >
        <tr
          class="af-table__tr"
        >
          <td
            class="af-table__cell"
          >
            developers
          </td>
          <td
            class="af-table__cell"
          >
            gilles.cruchon@axa.fr, guillaume.chervet@axa.fr
          </td>
          <td
            class="af-table__cell af-table__small"
          >
            <a
              class="btn af-btn--circle"
              href="#"
              id="editActionId"
              role="button"
              tabindex="0"
              title="Edit"
            >
              <i
                class="glyphicon glyphicon-pencil"
              />
            </a>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="af-paging"
    >
      <div
        class="af-paging__limit"
      >
        <div
          class="af-paging__limit"
        >
          <form
            class="af-paging__form"
          >
            <div
              class="af-form__group"
            >
              <div
                class="col col-sm-2 col-md-2 col-lg-2 col-xl-2"
              >
                <label
                  class="af-form__group-label"
                  for="home_paging"
                >
                  Display
                </label>
              </div>
              <div
                class="col col-sm-10 col-md-10 col-lg-10 col-xl-10"
              >
                <div
                  class="af-form__select"
                >
                  <div
                    class="af-form__select-container"
                  >
                    <select
                      class="af-form__input-select"
                      id="home_paging"
                    >
                      <option
                        value="5"
                      >
                        5
                      </option>
                      <option
                        value="10"
                      >
                        10
                      </option>
                      <option
                        value="25"
                      >
                        25
                      </option>
                      <option
                        value="50"
                      >
                        50
                      </option>
                      <option
                        value="100"
                      >
                        100
                      </option>
                    </select>
                    <span
                      class="glyphicon glyphicon-menu-down"
                    />
                  </div>
                  <span
                    class="af-form__input-cmplt"
                  >
                    elements
                  </span>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
      <div
        class="af-paging__pager"
      >
        <nav
          class="af-pager"
        >
          <ul
            class="af-pager__pagination"
          >
            <li
              class="af-pager__item af-pager__item--disabled"
            >
              <span
                class="af-pager__item-nolink"
              >
                « Previous
              </span>
            </li>
            <li
              class="af-pager__item af-pager__item--active"
            >
              <a
                class="af-pager__item-link"
                href="#"
              >
                <span>
                  1
                </span>
              </a>
            </li>
            <li
              class="af-pager__item af-pager__item--disabled"
            >
              <span
                class="af-pager__item-nolink"
              >
                Next »
              </span>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home.container for groups HomeContainer render correctly the groups 1`] = `
<DocumentFragment>
  <div
    class="af-title-bar af-title-bar--backhome"
  >
    <div
      class="container-fluid container af-title-bar__wrapper"
    >
      <a
        class="btn af-btn--circle"
        href="/"
        title="Home page"
      >
        <i
          class="glyphicon glyphicon-home"
        />
      </a>
      <h1
        class="af-title-bar__title"
      >
        Teams
      </h1>
      <small
        class="af-title-bar__subtitle"
      >
        Annotation teams governance
      </small>
    </div>
  </div>
  <div
    class="af-home container"
  >
    <h1
      class="af-title--content"
    >
      Creation
    </h1>
    <form
      name="newGroup"
    >
      <article
        class="af-panel af-panel--new-group"
      >
        <section
          class="af-panel__content af-panel__content--new-group"
        >
          <div
            class="row af-form__group"
          >
            <div
              class="col-md-2"
            >
              <label
                class="af-form__group-label"
                for="NAME"
              >
                Name : 
              </label>
            </div>
            <div
              class="col-md-10"
            >
              <div
                class="af-form__text"
              >
                <input
                  class="af-form__input-text"
                  id="NAME"
                  name="NAME"
                  type="text"
                  value=""
                />
              </div>
              <small
                class="af-form__help"
              >
                Ex : bank account details annotators
              </small>
            </div>
          </div>
          <button
            class="btn af-btn af-btn--hasiconRight af-btn--confirm af-btn--disabled"
            disabled=""
            id="myForm"
          >
            <span
              class="af-btn-text"
            >
              Validate
            </span>
            <i
              class="glyphicon glyphicon-arrowthin-right"
            />
          </button>
        </section>
      </article>
    </form>
    <h1
      class="af-title--content"
    >
      There is/are (1) team(s)
    </h1>
    <table
      class="af-table"
    >
      <thead
        class="af-table-thead"
      >
        <tr
          class="af-table__tr"
        >
          <th
            class="af-table__th"
          >
            <span
              class="af-table__th-content"
            >
              Name
            </span>
          </th>
          <th
            class="af-table__th"
          >
            <span
              class="af-table__th-content"
            >
              Users
            </span>
          </th>
          <th
            class="af-table__th"
          >
            <span
              class="af-table__th-content"
            >
              Actions
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class="af-table__body"
      >
        <tr
          class="af-table__tr"
        >
          <td
            class="af-table__cell"
          >
            developers
          </td>
          <td
            class="af-table__cell"
          >
            gilles.cruchon@axa.fr, guillaume.chervet@axa.fr
          </td>
          <td
            class="af-table__cell af-table__small"
          >
            <a
              class="btn af-btn--circle"
              href="#"
              id="editActionId"
              role="button"
              tabindex="0"
              title="Edit"
            >
              <i
                class="glyphicon glyphicon-pencil"
              />
            </a>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="af-paging"
    >
      <div
        class="af-paging__limit"
      >
        <div
          class="af-paging__limit"
        >
          <form
            class="af-paging__form"
          >
            <div
              class="af-form__group"
            >
              <div
                class="col col-sm-2 col-md-2 col-lg-2 col-xl-2"
              >
                <label
                  class="af-form__group-label"
                  for="home_paging"
                >
                  Display
                </label>
              </div>
              <div
                class="col col-sm-10 col-md-10 col-lg-10 col-xl-10"
              >
                <div
                  class="af-form__select"
                >
                  <div
                    class="af-form__select-container"
                  >
                    <select
                      class="af-form__input-select"
                      id="home_paging"
                    >
                      <option
                        value="5"
                      >
                        5
                      </option>
                      <option
                        value="10"
                      >
                        10
                      </option>
                      <option
                        value="25"
                      >
                        25
                      </option>
                      <option
                        value="50"
                      >
                        50
                      </option>
                      <option
                        value="100"
                      >
                        100
                      </option>
                    </select>
                    <span
                      class="glyphicon glyphicon-menu-down"
                    />
                  </div>
                  <span
                    class="af-form__input-cmplt"
                  >
                    elements
                  </span>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
      <div
        class="af-paging__pager"
      >
        <nav
          class="af-pager"
        >
          <ul
            class="af-pager__pagination"
          >
            <li
              class="af-pager__item af-pager__item--disabled"
            >
              <span
                class="af-pager__item-nolink"
              >
                « Previous
              </span>
            </li>
            <li
              class="af-pager__item af-pager__item--active"
            >
              <a
                class="af-pager__item-link"
                href="#"
              >
                <span>
                  1
                </span>
              </a>
            </li>
            <li
              class="af-pager__item af-pager__item--disabled"
            >
              <span
                class="af-pager__item-nolink"
              >
                Next »
              </span>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home.container for groups should render groups correctly with french translation 1`] = `
<DocumentFragment>
  <div
    class="af-title-bar af-title-bar--backhome"
  >
    <div
      class="container-fluid container af-title-bar__wrapper"
    >
      <a
        class="btn af-btn--circle"
        href="/"
        title="Home page"
      >
        <i
          class="glyphicon glyphicon-home"
        />
      </a>
      <h1
        class="af-title-bar__title"
      >
        Équipes
      </h1>
      <small
        class="af-title-bar__subtitle"
      >
        Gestion des équipes d'annotateurs
      </small>
    </div>
  </div>
  <div
    class="af-home container"
  >
    <h1
      class="af-title--content"
    >
      Création
    </h1>
    <form
      name="newGroup"
    >
      <article
        class="af-panel af-panel--new-group"
      >
        <section
          class="af-panel__content af-panel__content--new-group"
        >
          <div
            class="row af-form__group"
          >
            <div
              class="col-md-2"
            >
              <label
                class="af-form__group-label"
                for="NAME"
              >
                Nom : 
              </label>
            </div>
            <div
              class="col-md-10"
            >
              <div
                class="af-form__text"
              >
                <input
                  class="af-form__input-text"
                  id="NAME"
                  name="NAME"
                  type="text"
                  value=""
                />
              </div>
              <small
                class="af-form__help"
              >
                Ex : annotateurs de RIB
              </small>
            </div>
          </div>
          <button
            class="btn af-btn af-btn--hasiconRight af-btn--confirm af-btn--disabled"
            disabled=""
            id="myForm"
          >
            <span
              class="af-btn-text"
            >
              Valider
            </span>
            <i
              class="glyphicon glyphicon-arrowthin-right"
            />
          </button>
        </section>
      </article>
    </form>
    <h1
      class="af-title--content"
    >
      Il y a (1) équipe(s)
    </h1>
    <table
      class="af-table"
    >
      <thead
        class="af-table-thead"
      >
        <tr
          class="af-table__tr"
        >
          <th
            class="af-table__th"
          >
            <span
              class="af-table__th-content"
            >
              Nom
            </span>
          </th>
          <th
            class="af-table__th"
          >
            <span
              class="af-table__th-content"
            >
              Utilisateurs
            </span>
          </th>
          <th
            class="af-table__th"
          >
            <span
              class="af-table__th-content"
            >
              Actions
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class="af-table__body"
      >
        <tr
          class="af-table__tr"
        >
          <td
            class="af-table__cell"
          >
            developers
          </td>
          <td
            class="af-table__cell"
          >
            gilles.cruchon@axa.fr, guillaume.chervet@axa.fr
          </td>
          <td
            class="af-table__cell af-table__small"
          >
            <a
              class="btn af-btn--circle"
              href="#"
              id="editActionId"
              role="button"
              tabindex="0"
              title="Modifier"
            >
              <i
                class="glyphicon glyphicon-pencil"
              />
            </a>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="af-paging"
    >
      <div
        class="af-paging__limit"
      >
        <div
          class="af-paging__limit"
        >
          <form
            class="af-paging__form"
          >
            <div
              class="af-form__group"
            >
              <div
                class="col col-sm-2 col-md-2 col-lg-2 col-xl-2"
              >
                <label
                  class="af-form__group-label"
                  for="home_paging"
                >
                  Afficher
                </label>
              </div>
              <div
                class="col col-sm-10 col-md-10 col-lg-10 col-xl-10"
              >
                <div
                  class="af-form__select"
                >
                  <div
                    class="af-form__select-container"
                  >
                    <select
                      class="af-form__input-select"
                      id="home_paging"
                    >
                      <option
                        value="5"
                      >
                        5
                      </option>
                      <option
                        value="10"
                      >
                        10
                      </option>
                      <option
                        value="25"
                      >
                        25
                      </option>
                      <option
                        value="50"
                      >
                        50
                      </option>
                      <option
                        value="100"
                      >
                        100
                      </option>
                    </select>
                    <span
                      class="glyphicon glyphicon-menu-down"
                    />
                  </div>
                  <span
                    class="af-form__input-cmplt"
                  >
                    éléments
                  </span>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
      <div
        class="af-paging__pager"
      >
        <nav
          class="af-pager"
        >
          <ul
            class="af-pager__pagination"
          >
            <li
              class="af-pager__item af-pager__item--disabled"
            >
              <span
                class="af-pager__item-nolink"
              >
                « Précédent
              </span>
            </li>
            <li
              class="af-pager__item af-pager__item--active"
            >
              <a
                class="af-pager__item-link"
                href="#"
              >
                <span>
                  1
                </span>
              </a>
            </li>
            <li
              class="af-pager__item af-pager__item--disabled"
            >
              <span
                class="af-pager__item-nolink"
              >
                Suivant »
              </span>
            </li>
          </ul>
        </nav>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
